fixed chat overflow

--- a/src/chat_preview/twitch_chat_preview.css
+++ b/src/chat_preview/twitch_chat_preview.css
@@ -111,6 +111,7 @@ body {
     box-sizing: border-box;
     color: white;
     border-radius: 15px;
+    overflow: hidden;
 }
 
 .title {
